<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/px_value"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sp_value"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_px"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/bg_search"
            android:hint="@string/input_px_value_hint" />

        <TextView
            android:id="@+id/text_sp"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/bg_search"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_show"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:gravity="center"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btn_convert"
        style="@style/btnStylesorbus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:text="@string/click_to_convert" />

</LinearLayout>