<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/show_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/show_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/reduce_btn"
                style="@style/btnStylesorbus"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:text="@string/click_to_reduce" />

            <Button
                android:id="@+id/little_reduce_btn"
                style="@style/btnStylesorbus"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:text="@string/click_to_little_reduce" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/crease_btn"
                style="@style/btnStyleAcapulco"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:text="@string/click_to_crease" />

            <Button
                android:id="@+id/little_crease_btn"
                style="@style/btnStyleAcapulco"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:text="@string/click_to_little_crease" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>